<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ratingString"
            type="String" />

        <variable
            name="ratingFeedback"
            type="String" />

        <variable
            name="showCashText"
            type="Boolean" />

        <variable
            name="rideCost"
            type="String" />

        <variable
            name="riderName"
            type="String" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.rideRating.RideRatingFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ride_finished_text"
                    style="@style/GokadaSuperAppText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gokada_super_app_big_margin"
                    android:text="@string/ride_finished_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/gokada_super_app_big_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginTop="@dimen/gokada_super_app_extra_big_margin" />

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/fare_amount_background"
                    android:padding="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ride_finished_text">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/ride_amount"
                        style="@style/GokadaSuperAppText.Header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@{@string/NGN_formatter(rideCost)}"
                        android:textColor="@android:color/white"
                        tools:text="NGN 2000.00" />
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/collect_cash_from_text"
                    style="@style/GokadaSuperAppText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gokada_super_app_big_margin"
                    android:layout_marginBottom="@dimen/gokada_super_app_big_margin"
                    android:text="@{@string/collect_cash_formatter(riderName)}"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="@{showCashText ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                    tools:text="Collect Cash from Lagbaja" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ride_type"
                    style="@style/GokadaSuperAppText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gokada_super_app_big_margin"
                    android:layout_marginBottom="@dimen/gokada_super_app_big_margin"
                    android:text="@string/type_card_trip_text"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="@{showCashText ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/warning_text"
                    style="@style/GokadaSuperAppText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gokada_super_app_big_margin"
                    android:text="@string/do_not_collect_cash_text"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="@{showCashText ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ride_type" />

                <!--<com.google.android.material.button.MaterialButton
                    android:id="@+id/show_ussd_dialog"
                    style="@style/GokadaMaterialButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@android:color/white"
                    android:text="@string/or_try_ussd_text"
                    android:textColor="@color/colorPrimary"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ride_finished_text"
                    app:layout_constraintStart_toStartOf="@+id/ride_finished_text"
                    app:layout_constraintTop_toBottomOf="@+id/collect_cash_from_text" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!--        android:visibility="@{showCashText ? View.GONE : View.VISIBLE}"-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_trip_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{showCashText ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@{ratingString}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/rate_your_pilot" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7"
                app:mrb_progressTint="#ED8B1B"
                app:mrb_secondaryProgressTint="#ADADAD" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/additional_comment_card_view"
                style="@style/GokadaSuperAppCard"
                android:layout_width="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/gokada_super_app_big_margin"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="@dimen/gokada_card_corner_big_radius"
                app:cardElevation="@dimen/gokada_card_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/destination_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/add_additional_comment_hint"
                    android:paddingStart="@dimen/gokada_super_app_big_padding"
                    android:paddingEnd="@dimen/gokada_super_app_big_padding"
                    android:text="@={ratingFeedback}" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        android:visibility="@{showCashText ? View.VISIBLE : View.GONE}"-->
        <!---->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cash_trip_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{showCashText ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/center_horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_twenty_guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_twenty_guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/was_payment_successful_text"
                style="@style/GokadaSuperAppText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gokada_super_app_extra_big_margin"
                android:gravity="center"
                android:text="@string/was_payment_successful_text"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/right_twenty_guideline"
                app:layout_constraintStart_toEndOf="@+id/left_twenty_guideline"
                app:layout_constraintTop_toBottomOf="@+id/was_payment_successful_text">

                <RadioButton
                    android:id="@+id/yes_rb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/gokada_super_app_margin"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/yes_rb_text"
                    android:theme="@style/radio_button_style" />

                <RadioButton
                    android:id="@+id/no_rb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/gokada_super_app_margin"
                    android:layout_weight="1"
                    android:text="@string/no_rb_text"
                    android:theme="@style/radio_button_style" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_horizontal_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_btn"
            style="@style/GokadaMaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            android:padding="20dp"
            android:text="@string/button_done_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>